# Changelog
# $Id$
nn-nn-11 - Version 5.1.15

   - Fixed an issue where statement comments set via Connection.setStatementComment()
     weren't represented in autoGenerateTestcaseScript=true output.
     
12-06-10 - Version 5.1.14

   - Fix for Bug#58728, NPE in com.mysql.jdbc.jdbc2.optional.StatementWrappe.getResultSet()
     if rs is null. Regression test case added to Statement regression tests.

   - Fix for Bug#58751, DatabaseMetadata.getIndexInfo() CARDINALITY now clamped
     to Integer.MAX_VALUE.

   - Fix for BUG#58590
   - Testsuite.Simple.DateTest, MetadataTest, NumbersTest and StatementsTest cleaned and fixed.

   - Testsuite.simple, ConenctionTest & DataSourceTest are up to date. Major rework on 
     ConnectionTest.testDeadlockDetection (Sveta) and testUseCompress.
   
   - Testsuite.simple, CallableStatementTest & CharsetTests are up to date.
   
   - Testsuite.regression SubqueriesRegressionTest and StringRegressionTest are up to date.

   - Testsuite.regression MicroPerformanceRegressionTest, NumbersRegressionTest, PooledConnectionRegressionTest,
     ResultSetRegressionTest are up to date.

   - Testsuite.regression.MetaDataRegressionTest up to date.
   
   - Typo in StatementRegressionTest.testLikeWithBackslashes fixed. StatementRegressionTest
     is up to date.

   - Fix for Bug#58232 - CallableStatement fails to fetch OUT parameter against 5.5 server
   
   - Testsuite.regression.Connection, tests for BUG#45419 refined by Todd so not to cause failures.

   - Testsuite.regression.CallableStatement, tests for BUG#26959 failing against 5.5+ server.

   - Bringing testsuite.regression.CachedRowsetTest up to date.

   - Bringing BLOBregression tests up to date.

   - Fix for Bug#58042 - Statements test failure not handled.

   - Fix for Bug#57850 - Refresh SELECT statement doesn't use correct data type.
     Added Field.valueNeedsQuoting (private final boolean) and protected boolean getvalueNeedsQuoting().