@@ -34,6 +34,9 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStreamWriter;
 import java.io.UnsupportedEncodingException;
+import java.lang.management.ManagementFactory;
+import java.lang.management.ThreadInfo;
+import java.lang.management.ThreadMXBean;
 import java.lang.ref.SoftReference;
 import java.math.BigInteger;
 import java.net.ConnectException;
@@ -3588,7 +3591,7 @@ public class MysqlIO {
                     }
                 }
 
-                appendInnodbStatusInformation(xOpen, errorBuf);
+                appendDeadlockStatusInformation(xOpen, errorBuf);
 
                 if (xOpen != null && xOpen.startsWith("22")) {
                 	throw new MysqlDataTruncation(errorBuf.toString(), 0, true, false, 0, 0, errno);
@@ -3620,7 +3623,7 @@ public class MysqlIO {
         }
     }
 
-    private void appendInnodbStatusInformation(String xOpen,
+    private void appendDeadlockStatusInformation(String xOpen,
 			StringBuffer errorBuf) throws SQLException {
 		if (this.connection.getIncludeInnodbStatusInDeadlockExceptions()
 				&& xOpen != null
@@ -3652,6 +3655,69 @@ public class MysqlIO {
 			} finally {
 				if (rs != null) {
 					rs.close();
+				}
+			}
+		}
+		
+		if (this.connection.getIncludeThreadDumpInDeadlockExceptions()) {
+			errorBuf.append("\n\n*** Java threads running at time of deadlock ***\n\n");
+			
+			ThreadMXBean threadMBean = ManagementFactory.getThreadMXBean();
+			long[] threadIds = threadMBean.getAllThreadIds();
+
+			ThreadInfo[] threads = threadMBean.getThreadInfo(threadIds,
+					Integer.MAX_VALUE);
+			List<ThreadInfo> activeThreads = new ArrayList<ThreadInfo>();
+
+			for (ThreadInfo info : threads) {
+				if (info != null) {
+					activeThreads.add(info);
+				}
+			}
+
+			for (ThreadInfo threadInfo : activeThreads) {
+				// "Thread-60" daemon prio=1 tid=0x093569c0 nid=0x1b99 in
+				// Object.wait()
+
+				errorBuf.append('"');
+				errorBuf.append(threadInfo.getThreadName());
+				errorBuf.append("\" tid=");
+				errorBuf.append(threadInfo.getThreadId());
+				errorBuf.append(" ");
+				errorBuf.append(threadInfo.getThreadState());
+
+				if (threadInfo.getLockName() != null) {
+					errorBuf.append(" on lock=" + threadInfo.getLockName());
+				}
+				if (threadInfo.isSuspended()) {
+					errorBuf.append(" (suspended)");
+				}
+				if (threadInfo.isInNative()) {
+					errorBuf.append(" (running in native)");
+				}
+
+				StackTraceElement[] stackTrace = threadInfo.getStackTrace();
+
+				if (stackTrace.length > 0) {
+					errorBuf.append(" in ");
+					errorBuf.append(stackTrace[0].getClassName());
+					errorBuf.append(".");
+					errorBuf.append(stackTrace[0].getMethodName());
+					errorBuf.append("()");
+				}
+
+				errorBuf.append("\n");
+
+				if (threadInfo.getLockOwnerName() != null) {
+					errorBuf.append("\t owned by " + threadInfo.getLockOwnerName()
+							+ " Id=" + threadInfo.getLockOwnerId());
+					errorBuf.append("\n");
+				}
+
+				for (int j = 0; j < stackTrace.length; j++) {
+					StackTraceElement ste = stackTrace[j];
+					errorBuf.append("\tat " + ste.toString());
+					errorBuf.append("\n");
 				}
 			}
 		}
